# NdkGifdemo

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/giflib/: dgif_lib.c  gif_err.c  gif_lib.h  gifalloc.c
app/src/main/java/com/example/ndkgifdemo/: MainActivity.java
app/src/main/java/com/example/ndkgifdemo/utils/: GifHelper.java  PermissionUtility.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
